@@ -24,14 +24,14 @@
     <parent>
         <groupId>us.springett</groupId>
         <artifactId>alpine-parent</artifactId>
-        <version>3.3.0</version>
+        <version>3.7.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.dependencytrack</groupId>
     <artifactId>dependency-track</artifactId>
     <packaging>war</packaging>
-    <version>4.14.0-SNAPSHOT</version>
+    <version>4.14.0</version>
 
     <name>Dependency-Track</name>
     <url>https://dependencytrack.org/</url>
@@ -85,51 +85,48 @@
         <maven.compiler.target>21</maven.compiler.target>
 
         <!-- Dependency Versions -->
-        <frontend.version>4.13.5</frontend.version>
+        <frontend.version>4.14.1</frontend.version>
         <lib.alpine.version>${project.parent.version}</lib.alpine.version>
         <lib.awaitility.version>4.3.0</lib.awaitility.version>
         <lib.brotli-decoder.version>0.1.2</lib.brotli-decoder.version>
-        <lib.checkstyle.version>12.1.1</lib.checkstyle.version>
-        <lib.cloud-sql-connector-jdbc-sqlserver.version>1.26.1</lib.cloud-sql-connector-jdbc-sqlserver.version>
-        <lib.cloud-sql-mysql-socket-factory-connector-j-8.version>1.26.1</lib.cloud-sql-mysql-socket-factory-connector-j-8.version>
-        <lib.cloud-sql-postgres-socket-factory.version>1.26.1</lib.cloud-sql-postgres-socket-factory.version>
-        <lib.cpe-parser.version>3.0.0</lib.cpe-parser.version>
+        <lib.checkstyle.version>13.3.0</lib.checkstyle.version>
+        <lib.cloud-sql-connector-jdbc-sqlserver.version>1.28.2</lib.cloud-sql-connector-jdbc-sqlserver.version>
+        <lib.cloud-sql-mysql-socket-factory-connector-j-8.version>1.28.2</lib.cloud-sql-mysql-socket-factory-connector-j-8.version>
+        <lib.cloud-sql-postgres-socket-factory.version>1.28.2</lib.cloud-sql-postgres-socket-factory.version>
+        <lib.cpe-parser.version>3.0.1</lib.cpe-parser.version>
         <lib.commons-compress.version>1.28.0</lib.commons-compress.version>
-        <lib.commons-text.version>1.14.0</lib.commons-text.version>
-        <lib.ae-security.version>0.146.0</lib.ae-security.version>
+        <lib.commons-text.version>1.15.0</lib.commons-text.version>
+        <lib.ae-security.version>0.153.2</lib.ae-security.version>
         <lib.owasp-rr-calculator.version>1.0.1</lib.owasp-rr-calculator.version>
-        <lib.cyclonedx-java.version>11.0.0</lib.cyclonedx-java.version>
-        <lib.jakarta-validation.version>3.1.1</lib.jakarta-validation.version>
-        <lib.greenmail.version>2.1.7</lib.greenmail.version>
-        <lib.json-java.version>20250517</lib.json-java.version>
-        <lib.json-unit.version>5.0.0</lib.json-unit.version>
-        <lib.junit.version>5.11.4</lib.junit.version>
+        <lib.cyclonedx-java.version>12.1.0</lib.cyclonedx-java.version>
+        <lib.greenmail.version>2.1.8</lib.greenmail.version>
+        <lib.json-java.version>20251224</lib.json-java.version>
         <lib.lucene.version>8.11.4</lib.lucene.version>
-        <lib.maven-artifact.version>3.9.11</lib.maven-artifact.version>
+        <lib.maven-artifact.version>3.9.14</lib.maven-artifact.version>
         <lib.mockserver-netty.version>5.15.0</lib.mockserver-netty.version>
-        <lib.open-vulnerability-clients.version>9.0.1</lib.open-vulnerability-clients.version>
+        <lib.open-vulnerability-clients.version>9.0.3</lib.open-vulnerability-clients.version>
         <lib.packageurl.version>1.5.0</lib.packageurl.version>
-        <lib.pebble.version>3.2.4</lib.pebble.version>
-        <lib.protobuf-java.version>4.33.0</lib.protobuf-java.version>
-        <lib.resilience4j.version>2.3.0</lib.resilience4j.version>
-        <lib.swagger-parser.version>2.1.35</lib.swagger-parser.version>
+        <lib.pebble.version>4.1.1</lib.pebble.version>
+        <lib.protobuf-java.version>4.34.1</lib.protobuf-java.version>
+        <lib.resilience4j.version>2.4.0</lib.resilience4j.version>
+        <lib.swagger-parser.version>2.1.39</lib.swagger-parser.version>
         <lib.junit-pioneer.version>2.3.0</lib.junit-pioneer.version>
-        <lib.testcontainers.version>2.0.1</lib.testcontainers.version>
+        <lib.testcontainers.version>2.0.4</lib.testcontainers.version>
+        <lib.versatile.version>0.18.0</lib.versatile.version>
         <lib.wiremock.version>2.35.2</lib.wiremock.version>
         <lib.woodstox.version>7.1.1</lib.woodstox.version>
         <lib.signpost-core.version>2.1.1</lib.signpost-core.version>
         <lib.httpclient.version>4.5.14</lib.httpclient.version>
-        <lib.httpclient5.version>5.5.1</lib.httpclient5.version>
+        <lib.httpclient5.version>5.6</lib.httpclient5.version>
         <lib.log4j-over-slf4j.version>2.0.17</lib.log4j-over-slf4j.version>
         <lib.org-kohsuke-github-api.version>1.330</lib.org-kohsuke-github-api.version>
         <lib.com-asahaf-javacron.version>1.4.0</lib.com-asahaf-javacron.version>
         <!-- JDBC Drivers -->
-        <lib.jdbc-driver.mssql.version>13.2.1.jre11</lib.jdbc-driver.mssql.version>
+        <lib.jdbc-driver.mssql.version>13.4.0.jre11</lib.jdbc-driver.mssql.version>
         <lib.jdbc-driver.mysql.version>8.2.0</lib.jdbc-driver.mysql.version>
-        <lib.jdbc-driver.postgresql.version>42.7.8</lib.jdbc-driver.postgresql.version>
+        <lib.jdbc-driver.postgresql.version>42.7.10</lib.jdbc-driver.postgresql.version>
         <!-- Maven Plugin Properties -->
         <plugin.retirejs.breakOnFailure>false</plugin.retirejs.breakOnFailure>
-        <plugin.jetty.version>12.1.3</plugin.jetty.version>
         <plugin.protoc-jar.version>3.11.4</plugin.protoc-jar.version>
         <!-- SonarCloud properties -->
         <sonar.exclusions>src/main/webapp/**</sonar.exclusions>
@@ -204,7 +201,6 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>${lib.jakarta-validation.version}</version>
         </dependency>
 
         <dependency>
@@ -403,29 +399,21 @@
             <version>${lib.com-asahaf-javacron.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.nscuro</groupId>
+            <artifactId>versatile-core</artifactId>
+            <version>${lib.versatile.version}</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${lib.junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${lib.junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${lib.junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.test-framework.providers</groupId>
             <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-            <version>${lib.jersey.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -435,40 +423,29 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.jersey.connectors</groupId>
-            <artifactId>jersey-grizzly-connector</artifactId>
-            <version>${lib.jersey.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${lib.mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8-standalone</artifactId>
-            <version>${lib.wiremock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit-pioneer</groupId>
             <artifactId>junit-pioneer</artifactId>
-            <version>${lib.junit-pioneer.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>${lib.assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.javacrumbs.json-unit</groupId>
             <artifactId>json-unit-assertj</artifactId>
-            <version>${lib.json-unit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -581,9 +558,9 @@
             <plugin>
                 <groupId>io.github.ascopes</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>4.0.0</version>
+                <version>5.1.0</version>
                 <configuration>
-                    <protocVersion>${lib.protobuf-java.version}</protocVersion>
+                    <protoc>${lib.protobuf-java.version}</protoc>
                     <sourceDirectories>
                         <sourceDirectory>${project.basedir}/src/main/proto</sourceDirectory>
                     </sourceDirectories>
@@ -628,6 +605,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        @{argLine}
+                        -Xmx512m
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${lib.mockito.version}/mockito-core-${lib.mockito.version}.jar
+                        -Xshare:off
+                    </argLine>
                     <systemProperties>
                         <property>
                             <name>java.util.logging.config.file</name>
@@ -706,7 +692,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.6.2</version>
+                <version>3.6.3</version>
                 <executions>
                     <execution>
                         <id>merge-services-bom</id>
@@ -749,9 +735,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.eclipse.jetty.ee10</groupId>
-                <artifactId>jetty-ee10-maven-plugin</artifactId>
-                <version>${plugin.jetty.version}</version>
+                <groupId>org.eclipse.jetty.ee11</groupId>
+                <artifactId>jetty-ee11-maven-plugin</artifactId>
+                <version>${lib.jetty.version}</version>
                 <configuration>
                     <systemProperties>
                         <dev.mode.enabled>true</dev.mode.enabled>
@@ -827,9 +813,9 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.eclipse.jetty.ee10</groupId>
-                        <artifactId>jetty-ee10-maven-plugin</artifactId>
-                        <version>${plugin.jetty.version}</version>
+                        <groupId>org.eclipse.jetty.ee11</groupId>
+                        <artifactId>jetty-ee11-maven-plugin</artifactId>
+                        <version>${lib.jetty.version}</version>
                         <configuration>
                             <systemProperties>
                                 <dev.mode.enabled>true</dev.mode.enabled>
